Fixed alignment of the sitemap page with navbar

--- a/deps/css/sitemap.css
+++ b/deps/css/sitemap.css
@@ -23,7 +23,7 @@
     background-color: #ffe8c3;
 }
 body {
-    margin: 0;
+    margin-left: 0;
 }
 li {
     font-size: 1em;
